# hats-tap

./: .copier-answers.yml  README.md  index.json  info.json  pyproject.toml  regressions.json  regressions.xml
.github/ISSUE_TEMPLATE/: 1-bug_report.md
.github/workflows/: asv-main.yml  asv-nightly.yml  asv-pr.yml  pre-commit-ci.yml  smoke-test.yml  testing-and-coverage.yml
_results/: benchmarks.json
_results/gh-runner/: 113b03e4-virtualenv-py3.11-Cython-build-packaging.json  113b03e4-virtualenv-py3.12-Cython-build-packaging.json  19325c97-virtualenv-py3.12-Cython-build-packaging.json  1ac42c78-virtualenv-py3.12-Cython-build-packaging.json  1fb783ad-virtualenv-py3.11-Cython-build-packaging.json  1fb783ad-virtualenv-py3.12-Cython-build-packaging.json  22317aad-virtualenv-py3.11-Cython-build-packaging.json  22317aad-virtualenv-py3.12-Cython-build-packaging.json  28c97185-virtualenv-py3.11-Cython-build-packaging.json  28c97185-virtualenv-py3.12-Cython-build-packaging.json  2b68d431-virtualenv-py3.11-Cython-build-packaging.json  2b68d431-virtualenv-py3.12-Cython-build-packaging.json  38630bd5-virtualenv-py3.11-Cython-build-packaging.json  38630bd5-virtualenv-py3.12-Cython-build-packaging.json  43131ee5-virtualenv-py3.12-Cython-build-packaging.json  446d44d1-virtualenv-py3.11-Cython-build-packaging.json  446d44d1-virtualenv-py3.12-Cython-build-packaging.json  49a96936-virtualenv-py3.12-Cython-build-packaging.json  4c83db1b-virtualenv-py3.11-Cython-build-packaging.json  4c83db1b-virtualenv-py3.12-Cython-build-packaging.json  5bfde414-virtualenv-py3.12-Cython-build-packaging.json  6a5d6a15-virtualenv-py3.12-Cython-build-packaging.json  7171d695-virtualenv-py3.11-Cython-build-packaging.json  7171d695-virtualenv-py3.12-Cython-build-packaging.json  72860b57-virtualenv-py3.12-Cython-build-packaging.json  91f4fadc-virtualenv-py3.11-Cython-build-packaging.json  91f4fadc-virtualenv-py3.12-Cython-build-packaging.json  9780383b-virtualenv-py3.11-Cython-build-packaging.json  9780383b-virtualenv-py3.12-Cython-build-packaging.json  9820e939-virtualenv-py3.11-Cython-build-packaging.json  9820e939-virtualenv-py3.12-Cython-build-packaging.json  9b3a4bd3-virtualenv-py3.12-Cython-build-packaging.json  9b607c6f-virtualenv-py3.11-Cython-build-packaging.json  9b607c6f-virtualenv-py3.12-Cython-build-packaging.json  9e3e2339-virtualenv-py3.11-Cython-build-packaging.json  9e3e2339-virtualenv-py3.12-Cython-build-packaging.json  b045a19e-virtualenv-py3.12-Cython-build-packaging.json  b4aaa301-virtualenv-py3.11-Cython-build-packaging.json  (+12 more)
benchmarks/: asv.conf.json  benchmarks.py
docs/: conf.py  index.rst
graphs/summary/: benchmarks.mem_list.json  (+2 more)
src/: adql_to_lsdb.py
(+20 files in other folders)
