
[project]
name = "hats-tap"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    { name = "LINCC Frameworks", email = "lincc-frameworks-team@lists.lsst.org" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "Flask>=2.0.0",
    "lsdb>=0.6.0",
    "pandas",
    "pyvo>=1.4",
    "queryparser-python3",
]

[project.urls]
"Source Code" = "https://github.com/astronomy-commons/hats-tap"

[project.scripts]
tap-server = "tap_server.tap_server:main"

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "asv[virtualenv]==0.6.5", # Used to compute performance benchmarks
    "jupyter", # Clears output from Jupyter notebooks
    "pre-commit", # Used to run checks before finalizing a git commit
    "pytest",
    "pytest-cov", # Used to report total code coverage
    "ruff", # Used for static linting of files
]

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/hats_tap/_version.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src",
    "docs",
]
pythonpath = ["src"]
addopts = "--doctest-modules --doctest-glob=*.rst"

[tool.ruff]
line-length = 110
target-version = "py39"
[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # docstrings
    "D101",
    "D102",
    "D103",
    "D106",
    "D206",
    "D207",
    "D208",
    "D300",
    "D417",
    "D419",
    # Numpy v2.0 compatibility
    "NPY201",
]
ignore = [
    "UP006", # Allow non standard library generics in type hints
    "UP007", # Allow Union in type hints
    "SIM114", # Allow if with same arms
    "B028", # Allow default warning level
    "SIM117", # Allow nested with
    "UP015", # Allow redundant open parameters
    "UP028", # Allow yield in for loop
]
[tool.ruff.lint.per-file-ignores]
"src/adql_to_lsdb.py" = ["N802"] # Must use camel-case to extend the parser


[tool.coverage.run]
omit=["src/hats_tap/_version.py"]
